--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=".">
+    <meta name="description" content="  Welcome to the joint Integrable Systems seminar initiative!  The seminar is organized by Li Wang, Guo Qiang Zhang, and Zi Jian Zhou.  This event is intended for sharing their recent works together with intensive discussions. are encouraged to. We warmly invite researchers especially young researches to participate in us.">
     <meta name="author" content="Michael Borinsky">
 
     <title>Kolleg Mathematik Physik Berlin - Events</title>
