--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Joint HEP-TH</title>
-   <meta name="author" content="Joint HEP-TH" />
+   <title>Integrable Systems Seminar</title>
+   <meta name="author" content="Integrable Systems Seminar" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -34,7 +34,7 @@ var WRInitTime=(new Date()).getTime();
   <div id="home">
   
   <p>
-  This is the home page for the joint HEP-TH seminar, co-organized by Hongfei Shu, Ruidong Zhu and Hao Zou. This event is intended for people sharing their recent works together with intensive discussions. Young researches are especially encouraged to participate and interact.
+  Welcome to the joint Integrable Systems seminar initiative!  The seminar is organized by Li Wang, Guo Qiang Zhang, and Zi Jian Zhou.  This event is intended to encourage for researchers  to share and communicate their recent works. We warmly invite researchers especially young one to participate in us.
   </p>
   
   <p>
